--- a/templates/project/list.html.twig
+++ b/templates/project/list.html.twig
@@ -5,12 +5,18 @@
 {% block body %}
     <div class="container-projects">
         <div class="card" style="width: 30rem; margin: 1rem;">
-            <img class="card-img-top" style="padding: .5rem;" src="https://picsum.photos/200/150" alt="Card image cap">
+            <img class="card-img-top" style="padding: .5rem;" src="{{ asset("assets/") ~ project.imageSrc }}"
+                 alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">{{ project.title }}</h5>
-                <p class="card-text">{{ project.content }}</p>
+                <p class="card-text">{{ project.content|raw }}</p>
             </div>
+
+            <a href="{{ path('project_index') }}" class="go-back-project-full">
+                Retour aux projets
+            </a>
         </div>
     </div>
+
 {% endblock %}
 
